edit details page created

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -8,9 +8,6 @@
             <input id="sigInput" name="signature" placeholder="signature">
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
         </div>
-        <input type="submit">
+        <input type="formSubmit" value>
     </form>
 </div>
-<canvas id="sigCanvas"></canvas>
-<button id="clearButton">Clear Signature</button>
-<script src="controller.js"></script>
