--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -3,6 +3,6 @@
   <input type="text" name="age" placeholder="age">
   <input type="text" name="city" placeholder="city/town">
   <input type="text" name="homepage" placeholder="homepage or social media">
-  <input type="hidden" name="_csrf" value="{{csrfToken}}"
-  <input  id="formButton" type="submit" name="submit" value="continue">
+  <input type="hidden" name="_csrf" value="{{csrfToken}}">
+  <input id="formButton" type="submit" name="submit" value="continue">
 </form>
