--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,12 +2,13 @@
   <form method="POST" id="registerForm">
       <div>
           <h1>Create an account to Sign the petition!</h2>
-          <input type="text" name="firstName" placeholder="first name" required>
-          <input type="text" name="lastName" placeholder="last name" required>
-          <input type="email" name="email" placeholder="E-mail" required>
-          <input type="password" name="password" placeholder="password" required>
-          <input type="password" name="confirmPassword" placeholder="confirm password" required>
-          <input type="hidden" name="passwordFinalCheck">
+          <input type="text" name="firstName" placeholder="first name"  >
+          <input type="text" name="lastName" placeholder="last name"  >
+          <input type="email" name="email" placeholder="E-mail"  >
+          <input type="password" name="password" placeholder="password"  >
+          <!-- <input type="password" name="confirmPassword" placeholder="confirm password"  > -->
+          <input id="sigInput" type="hidden" name="signature">
+          <input type="hidden" name="passwordConf">
           <input type="hidden" name="_csrf" value="{{csrfToken}}">
       </div>
       <input id="submitForm" value="Sign Up and Sign!" type="submit">
