bashcommit for pulling new changes from other pc

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <title>Petition</title>
+    <link href="/style.css" type="text/css" rel="stylesheet">
+    <title>{{cause}}</title>
 </head>
     <body>
         {{>nav}}
-<<<<<<< HEAD
-        <h1 class="title">Make SPICED hoodies light grey again!</h1>
-=======
->>>>>>> bb03adac58627f2e3b20288079e7d4363649612e
-        <div>{{{body}}}</div>
+        {{#if error}}
+            <h4 style="color: red">Something went wrong<h4>
+        {{/if}}
+        {{{body}}}
     </body>
 </html>
