--- a/views/signatures.handlebars
+++ b/views/signatures.handlebars
@@ -1,7 +1,6 @@
 <div id="supporters">
   {{#supporter}}
-    <h3>{{firstName}}</h3>
-    <h3>{{lastName}}</h3>
+    <h3>{{firstName}} {{lastName}}</h3>
     <p>{{reason}}</p>
     <img src="{{signature}}">
   {{/supporter}}
