--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,8 @@
     <body>
         {{>nav}}
         {{#if error}}
-            <h4 style="color: red">Something went wrong<h4>
+            <h4 style="color: red">Something went wrong: {{msg}}<h4>
+
         {{/if}}
         {{{body}}}
     </body>
