friday morning commit for dry run heroku test

--- a/views/partials/signatures.handlebars
+++ b/views/partials/signatures.handlebars
@@ -1,7 +1,9 @@
 <div id="supporters">
   {{#supporter}}
     <h3>{{firstName}} {{lastName}}</h3>
-    <p>{{reason}}</p>
+    <h6>{{age}}</h6>
+    <h6>{{city}}</h6>
+    <h6>{{homepage}}</h6>
     <img src="{{signature}}">
   {{/supporter}}
 </div>
