pre demonstration commit

--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,2 +1,3 @@
+<h1>Thank you {{firstName}}!<br><br> For supporting {{cause}}</h1>
 <h1><a href="/signatures">See all {{amount}} signatures</a></h1>
 {{>signatures}}
