--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,53 @@
 body {
     text-align: center;
     background-color: lightgrey;
-    margin: none;
+    margin: 0;
     font-family: sans-serif;
+}
+
+#navbar {
+    display: flex;
+    background-color: white;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+#supporters {
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
+}
+
+.supporter {
+    padding: 20px;
+    border: 1px black solid;
+    min-width: 200px;
+    min-height: 200px;
+    margin: 10px;
+    border-radius: 20px;
+}
+
+.navItem {
+    padding: 10px;
+}
+
+#signHere {
+    margin: 0 auto;
+}
+
+#signHere input {
+    border-radius: 20px;
+    padding: 20px;
+}
+
+#signHere button {
+    border-radius: 20px;
+    padding: 20px;
 }
 
 #sigInput {
     visibility: hidden;
+    border-radius: 5px;
 }
 /*SPICED: light purple, yellowy orange, red, rebeccapurple */
 #sigCanvas {
@@ -24,12 +65,15 @@ body {
     background-color: white;
 }
 
-input {
-    margin-top: 20px;
-    display: block;
-    margin-left: 33%;
+.signature {
+    margin: 20px auto;
+    max-height: 200px;
+    border: 1px black solid;
+    border-radius: 65px;
+    background-color: white;
 }
 
-#formButton {
-    margin-left: 40%;
+input {
+    display: block;
+    margin: 15px auto;
 }
