--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,5 +1,5 @@
 <nav id="navbar">
     {{#navItems}}
-        <a href="{{link}}"><p>{{name}}</p></a>
+        <a class="navItem" href="{{link}}"><p>{{name}}</p></a>
     {{/navItems}}
 </nav>
