finished roulette feature

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,7 +1,9 @@
 <div id="register">
   <form method="POST" id="registerForm">
       <div>
-          <h1>{{cause}}</h1>
+          <h1>Are you being told lies of convinience, do any of these
+              sound familiar?</h1>
+          <h1 id="title">{{cause}}</h1>
           <h1>Create an account to Sign the petition!</h2>
           <input type="text" name="firstName" placeholder="first name"  >
           <input type="text" name="lastName" placeholder="last name"  >
