--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,3 +1,5 @@
 <h1>Thank you {{firstName}}!<br><br> For supporting {{cause}}</h1>
 <h1><a href="/signatures">See all {{amount}} signatures</a></h1>
 {{>signatures}}
+
+<h1>Want to change your signature?<a href="/profile/signature">click here</a></h1>
