reworked working product

--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -1,5 +1,7 @@
 <nav id="navbar">
     {{#navItems}}
-        <a class="navItem" href="{{link}}"><p>{{name}}</p></a>
+        <div class="navItem">
+            <a href="{{link}}"><p><em>{{name}}</em></p></a>
+        </div>
     {{/navItems}}
 </nav>
