--- a/views/totalSign.handlebars
+++ b/views/totalSign.handlebars
@@ -1,16 +1,28 @@
-<h1>{{cause}}</h1>
+<h1 id="title">We want our money working for us not for profit: against {{cause}}</h1>
 <h2>Meet your fellow supporters</h2>
-<div id="supporters">
-  {{#supporter}}
-  <div class="supporter">
-        <h3>{{firstName}} {{lastName}}</h3>
-        <h5>{{age}}</h5>
-        <h5>{{city}}</h5>
-        <h5>{{homepage}}</h5>
-        {{#if signature}}
-            <h5><em>Signed:</em></h5>
-            <img class="signature" src="{{signature}}">
-        {{/if}}
-    </div>
-  {{/supporter}}
+<div style="display: inline">
+    <input id="searchBar" type="text" placeholder="search supporters">{{input}}</input>
+    <select>
+        <option value="city">City</option>
+        <option value="name">Name</option>
+    </select>
 </div>
+
+
+
+<div id="supporters">
+      {{#supporter}}
+      <div class="supporter">
+            <h3>{{firstName}} {{lastName}}</h3>
+            <h5>{{age}}</h5>
+            <h5>{{city}}</h5>
+            <h5>{{homepage}}</h5>
+            {{#if signature}}
+                <h5><em>Signed:</em></h5>
+                <img class="signature" src="{{signature}}">
+            {{/if}}
+        </div>
+      {{/supporter}}
+    </div>
+</div>
+<script src="/roulette.js"></script>
