--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,9 @@
 body {
     text-align: center;
-    background-color: lightgrey;
+    background-color: black;
     margin: 0;
     font-family: sans-serif;
-}
-
-#navbar {
-    display: flex;
-    background-color: white;
-    width: 100%;
-    margin-bottom: 10px;
+    color: white;
 }
 
 #supporters {
@@ -19,16 +13,95 @@ body {
 }
 
 .supporter {
-    padding: 20px;
-    border: 1px black solid;
+    padding: 10px;
+    height: 400px;
+    width: 400px;
+    border: 1px white solid;
+    box-shadow: 2px 5px white;
     min-width: 200px;
     min-height: 200px;
     margin: 10px;
     border-radius: 20px;
 }
 
+a {
+    color: white;
+}
+
+a:active {
+    color: white;
+    transform: translateY(5px);
+}
+
+#navbar {
+    display: flex;
+    background-color: white;
+    width: 100%;
+    margin-bottom: 10px;
+    padding-bottom: 2px;
+    border-radius: 0px 0px 10px 10px;
+}
+
+#registerForm input {
+    border-radius: 5px;
+    padding: 5px;
+}
+
+#submitForm {
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 20px;
+    width: 190px;
+    height: 80px;
+    border: 2px solid white;
+    background-color: black;
+    color: white;
+    box-shadow: 5px 2px white;
+}
+
+#submitForm:hover {
+    color: black;
+    background-color: white;
+    box-shadow: 5px 2px black;
+    border: 1px black solid;
+    box-shadow: 5px 2px green;
+}
+
+#submitForm:active {
+    color: white;
+    background-color: green;
+    box-shadow: white;
+    border: 2px solid white;
+    box-shadow: 5px 2px white;
+    transform: translateY(5px);
+}
+
 .navItem {
+    background-color: black;
     padding: 10px;
+    color: black;
+    margin: 0px 5px;
+    transform: skew(-20deg);
+}
+
+.navItem p {
+    transform: skew(20deg);
+}
+
+input {
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.navItem :hover {
+    background-color: white;
+    color: black;
+}
+
+.navItem a {
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
 }
 
 #signHere {
@@ -49,12 +122,28 @@ body {
     visibility: hidden;
     border-radius: 5px;
 }
+
+#searchBar {
+    text-align: center;
+    font-size: 20px;
+    width: 80%;
+    height: 40px;
+    padding: 10px;
+    background-image: url("magglass.png");
+}
+
+#searchButton {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    position: relative;
+    background-image: url("/magglass.png");
+    background-color: #cccccc;
+}
 /*SPICED: light purple, yellowy orange, red, rebeccapurple */
 #sigCanvas {
     margin: 20px;
     border: 1px black dotted;
-    width: 400px;
-    height: 100px;
     background-color: white;
 }
 
@@ -62,7 +151,7 @@ body {
     padding: 20px;
     position: relative;
     border-radius: 20px;
-    background-color: white;
+    background-color: black;
 }
 
 .signature {
