--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -42,6 +42,8 @@
 
 
   <input type="hidden" name="_csrf" value="{{csrfToken}}">
-  <input  id="formButton" type="submit" name="submit" value="Update">
+  <input  id="submitForm" type="submit" name="submit" value="Update Profile">
 
 </form>
+
+<form>
