--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,5 +5,5 @@
           <input type="password" name="password" placeholder="Password" required>
           <input type="hidden" name="_csrf" value="{{csrfToken}}">
     </div>
-    <input type="submit">
+    <input id="submitForm" type="submit" value="Log In">
 </form>
