fixed yet unfinished feature

--- a/views/totalSign.handlebars
+++ b/views/totalSign.handlebars
@@ -1,7 +1,7 @@
 <h1 id="title">We want our money working for us not for profit: against {{cause}}</h1>
 <h2>Meet your fellow supporters</h2>
 <div style="display: inline">
-    <input id="searchBar" type="text" placeholder="search supporters">{{input}}</input>
+    <input id="searchBar" type="text" placeholder="search supporters"></input>
     <select>
         <option value="city">City</option>
         <option value="name">Name</option>
