changed errors with cause not being displayed, changed cause styling and element

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,12 +2,12 @@
 <html>
 <head>
     <link href="/style.css" type="text/css" rel="stylesheet">
-    <title>{{cause}}</title>
+    <title id="title">Against: {{cause}}</title>
 </head>
     <body>
         {{>nav}}
         {{#if error}}
-            <h4 style="color: red">Something went wrong: {{msg}}<h4>
+            <h4 style="color: red">Something went wrong! {{msg}}<h4>
         {{/if}}
         {{{body}}}
     </body>
