--- a/views/partials/signatures.handlebars
+++ b/views/partials/signatures.handlebars
@@ -1,8 +1,10 @@
 <div id="supporters">
   {{#supporter}}
+  <div>
     <h3>{{firstName}} {{lastName}}</h3>
     <h6>{{age}}</h6>
     <h6>{{city}}</h6>
+  </div>
     <h6>{{homepage}}</h6>
     {{#if signature}}
         <img class="signature" src="{{signature}}">
