--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,4 +1,4 @@
-<h2>Let people know that you support: {{>cause}}</h2>
+<h2>Let people know that you're against:</h2> <p id="cause">{{cause}}</p>
 <form method="POST">
   <input type="text" name="age" placeholder="age">
   <input type="text" name="city" placeholder="city/town">
