--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
   <form method="POST" id="registerForm">
       <div>
           <h1>Demand more from companies trying to make a buck off of
-          lousy products, sign this petition against <a id="title"><em><strong>{{cause}}</strong></em></a></h1>
+          lousy products, sign this petition against</h1> <p id="cause"><em><strong>{{cause}}</strong></em></p>
           <h1>Create an account to Sign the petition!</h2>
           <input required type="text" name="firstName" placeholder="first name"  >
           <input required type="text" name="lastName" placeholder="last name"  >
