--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,14 @@ body {
     color: white;
 }
 
+#cause {
+    background-color: yellow;
+    font-weight: bold;
+    padding: 5px;
+    transform: skew(-20deg);
+    font-size: 40px;
+}
+
 #supporters {
     display: flex;
     justify-content: space-around;
