--- a/views/thankyou.handlebars
+++ b/views/thankyou.handlebars
@@ -1,4 +1,4 @@
-<h1>Thank you {{firstName}}!<br><br> For supporting {{cause}}</h1>
+<h1>Thank you {{firstName}}!<br><br> For joining the fight against:</h1> <p id="cause"> {{cause}} </p>
 <h1><a href="/signatures">See all {{amount}} signatures</a></h1>
 {{>signatures}}
 
